k3_manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-server
  labels:
    app: video-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: video-server
  template:
    metadata:
      labels:
        app: video-server
    spec:
      containers:
      - name: video-server
        image: aditya/video_Seerver:latest
        ports:
        - containerPort: 5000
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
