k3_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-server
spec:
  selector:
    app: video-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
