k3_manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: video-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: video.aditya.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: video-server
            port:
              number: 80
  tls:
  - hosts:
    - video.aditya.dev
    secretName: video-server-tls
